Fix horizontal overflow by making menu fixed

--- a/styles/_menu.scss
+++ b/styles/_menu.scss
@@ -1,6 +1,6 @@
 &-menu {
   @include oc-init;
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
